--- a/DistributionPackages/Vendor.Shared/NodeTypes/Mixin/Link.yaml
+++ b/DistributionPackages/Vendor.Shared/NodeTypes/Mixin/Link.yaml
@@ -8,14 +8,24 @@
           icon: 'link'
   properties:
     link:
-      type: Sitegeist\Archaeopteryx\Link
+      type: string
       ui:
-        label: 'Link-Ziel'
+        label: 'Link Target'
         reloadIfChanged: true
         inspector:
           group: 'link'
+          editor: 'Sitegeist.Archaeopteryx/Inspector/Editors/LinkEditor'
           editorOptions:
-            anchor: true
-            title: true
-            relNofollow: true
-            targetBlank: true
+            linkTypes:
+              'Sitegeist.Archaeopteryx:Node':
+                position: start 100
+              'Sitegeist.Archaeopteryx:Asset':
+                position: start 90
+              'Sitegeist.Archaeopteryx:MailTo':
+                position: start 80
+              'Sitegeist.Archaeopteryx:Web':
+                position: start 70
+              'Sitegeist.Archaeopteryx:PhoneNumber':
+                position: start 60
+      validation:
+        Neos.Neos/Validation/NotEmptyValidator: { }
