edit document labels

--- a/DistributionPackages/Vendor.SupportWheelInventor/NodeTypes/Document/HomePage.yaml
+++ b/DistributionPackages/Vendor.SupportWheelInventor/NodeTypes/Document/HomePage.yaml
@@ -3,7 +3,7 @@
     'Vendor.SupportWheelInventor:Document': true
   ui:
     icon: globe
-    label: i18n
+    label: 'Homepage'
 
   constraints:
     nodeTypes:
