--- a/DistributionPackages/Vendor.SupportWheelInventor/NodeTypes/Document/WebPage.yaml
+++ b/DistributionPackages/Vendor.SupportWheelInventor/NodeTypes/Document/WebPage.yaml
@@ -3,7 +3,7 @@
     'Vendor.SupportWheelInventor:Document': true
   ui:
     icon: file
-    label: i18n
+    label: 'Web Page'
 
   constraints:
     nodeTypes:
