--- a/DistributionPackages/Vendor.SupportWheelInventor/NodeTypes/Document/Error.404.yaml
+++ b/DistributionPackages/Vendor.SupportWheelInventor/NodeTypes/Document/Error.404.yaml
@@ -3,7 +3,7 @@
     'Vendor.SupportWheelInventor:Document': true
   ui:
     icon: exclamation-triangle
-    label: i18n
+    label: '404 Page'
   childNodes:
     main:
       type: 'Neos.Neos:ContentCollection'
