85647 - debug webpage constraints

--- a/DistributionPackages/Vendor.SupportWheelInventor/NodeTypes/Document/WebPage.yaml
+++ b/DistributionPackages/Vendor.SupportWheelInventor/NodeTypes/Document/WebPage.yaml
@@ -7,8 +7,8 @@
 
   constraints:
     nodeTypes:
-      'Vendor.WheelInventor:Document.WebPage': true
-      'Vendor.WheelInventor:Document.Shortcut': true
+      'Vendor.SupportWheelInventor:Document.WebPage': true
+      'Vendor.SupportWheelInventor:Document.Shortcut': true
   childNodes:
     main:
       type: 'Neos.Neos:ContentCollection'
