--- a/DistributionPackages/Vendor.SupportWheelInventor/NodeTypes/Document/HomePage.yaml
+++ b/DistributionPackages/Vendor.SupportWheelInventor/NodeTypes/Document/HomePage.yaml
@@ -26,3 +26,4 @@
           'Vendor.SupportWheelInventor:Content.Accordion': true
           'Vendor.SupportWheelInventor:Content.TileNavigation': true
           'Vendor.SupportWheelInventor:Content.AnchorNavigation': true
+# just some test comment
