--- a/DistributionPackages/Vendor.Shared/composer.json
+++ b/DistributionPackages/Vendor.Shared/composer.json
@@ -20,7 +20,7 @@
         "sitegeist/kaleidoscope": "^6.5",
         "sitegeist/csvpo": "^1.5",
         "sitegeist/stampede": "^1.5",
-        "sitegeist/archaeopteryx": "^1.3",
+        "sitegeist/archaeopteryx": "dev-feature/inspectorLinkProperty",
         "sitegeist/iconoclasm": "^2.0",
         "packagefactory/atomicfusion-proptypes": "^2.0",
         "packagefactory/atomicfusion-classnames": "^1.0",
