85647 - make links optional

--- a/DistributionPackages/Vendor.SupportWheelInventor/NodeTypes/Content/ImageWithText.yaml
+++ b/DistributionPackages/Vendor.SupportWheelInventor/NodeTypes/Content/ImageWithText.yaml
@@ -19,6 +19,8 @@
           position: 10
 
   properties:
+    link:
+      validation: { }
     alignment:
       type: string
       defaultValue: 'Bild links'
