#85647 link with optional label text

--- a/DistributionPackages/Vendor.Shared/NodeTypes/Mixin/Link.yaml
+++ b/DistributionPackages/Vendor.Shared/NodeTypes/Mixin/Link.yaml
@@ -32,3 +32,10 @@
                 position: start 60
       validation:
         Neos.Neos/Validation/NotEmptyValidator: { }
+    link__label:
+      type: string
+      ui:
+        label: 'Link-Label'
+        reloadIfChanged: true
+        inspector:
+          group: 'link'
